gcc/testsuite/rust/rustc/ui/unresolved/unresolved-extern-mod-suggestion.rs
extern crate core;
use core;
// { dg-error ".E0254." "" { target *-*-* } .-1 }

fn main() {}

